# TriRGB

./: .gitignore  HANDOFF.md  PROJECT.md  README.md  ScanLight.html  pytest.ini
docs/: OPERATING.md  REVIEW-POLICY.md  automation.md  ax-id-reference.md  calibration_notes.md  interactive_user_guide.html  optical_dry_run.md
phase1/scanlightctl/: README.md  pyproject.toml
phase1/scanlightctl/scanlight/: __init__.py  cli.py  device.py  protocol.py
phase1/scanlightctl/tests/: test_cli.py  test_device.py  test_protocol.py
phase1/sony-capture/: .gitignore  CMakeLists.txt  README.md
phase1/sony-capture/src/: main.cpp
phase2/batch-composite/: README.md  pyproject.toml
phase2/batch-composite/batch_composite/: __init__.py  batch.py
phase2/batch-composite/tests/: test_batch.py
phase2/c41-core/: README.md  pyproject.toml
phase2/c41-core/c41_core/: __init__.py  contracts.py  fixtures.py
phase2/c41-core/tests/: test_contracts.py  test_fixtures.py
phase2/rgb-composite/: PLAN_hd_curve_improvements.md  README.md  pyproject.toml
phase2/rgb-composite/rgb_composite/: __init__.py  checks.py  composite.py  dng.py  ffc.py  icc.py  rebate_detect.py  triplet_positive.py
phase2/rgb-composite/tests/: test_checks.py  test_composite.py  test_dng.py  test_ffc.py  test_icc.py  test_inversion.py  test_real_arw.py  test_rebate_detect.py  test_tone_curve.py  test_triplet_positive.py
phase2/triplet-capture/: README.md  pyproject.toml
phase2/triplet-capture/tests/: test_app_calibrate_routes.py  test_calibrate_exposure.py  test_capture_flats.py  test_composite_status.py  test_composite_worker.py  test_inbox.py  test_orchestrator.py
phase2/triplet-capture/triplet_capture/: __init__.py  app.py  calibrate_exposure.py  capture_flats.py  composite_worker.py  inbox.py  orchestrator.py  sony_persist.py
phase2/triplet-capture/triplet_capture/templates/: index.html
phase3/: README.md
phase3/FilmScanner/: Package.swift
phase3/FilmScanner/Resources/: AppIcon.icns  make_icon.py
phase3/FilmScanner/Sources/ScanlightApp/: AccessibilityIDs.swift  CalibrationResult.swift  CalibrationView.swift  CalibrationViewModel.swift  CalibrationWizardCodable.swift  CalibrationWizardView.swift  CalibrationWizardViewModel.swift  DesignSystem.swift  FakeBridge.swift  FilmStockManagerView.swift  OrchestratorClient.swift  PositiveInversionView.swift  ProductWorkflowViews.swift  PythonToolLocator.swift  RebateRegion.swift  ScanSessionState.swift  ScanSettingsView.swift  ScanView.swift  ScanlightAppMain.swift  ScanlightView.swift  ScanlightViewModel.swift  SettingsStore.swift  SonyCameraConnection.swift  SonyLiveViewPanel.swift  StockCalibrationProfile.swift  WizardProgressView.swift  WorkflowShellView.swift
phase3/FilmScanner/Sources/ScanlightSwift/: FakeTransport.swift  Protocol.swift  Scanlight.swift  SerialPortTransport.swift  Transport.swift
phase3/FilmScanner/Sources/ScanlightSwiftCLI/: main.swift
phase3/FilmScanner/Tests/ScanlightAppUITests/: AccessibilityIDCoverageTests.swift  CalibrationWizardUITests.swift  CalibrationWizardViewModelTests.swift  OrchestratorClientTests.swift  PositiveInversionRunnerTests.swift  ScanCoordinatorTests.swift  ScanViewUITests.swift  ScanlightAppUITests.swift  SettingsCalibrationUITests.swift
phase3/FilmScanner/Tests/ScanlightSwiftTests/: ProtocolTests.swift  ScanlightDriverTests.swift
scripts/: capture-calibration.sh  check_docs_consistency.py  classify-arw.py  compare-dcp.py  cua-drive-swift-app.sh  diagnose.py  dry-run-checklist.sh  inspect-calibration.py  peer-review.py  smoketest.sh  test_check_docs_consistency.py  test_classify_arw.py  test_compare_dcp.py  test_inspect_calibration.py  test_peer_review.py  test_swift_cli.py  triplet-capture
tests/integration/: README.md  conftest.py  test_orchestrator_to_composite_handoff.py  test_triplet_to_composite.py
web/: README.md  index.html
