[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "c41-core"
version = "0.1.0"
description = "Versioned data contracts and synthetic C-41 fixtures for the narrowband inversion pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["c41_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
