[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rgb-composite"
version = "0.2.0"
description = "Composite narrowband-RGB triplet RAW captures into a 16-bit linear ProPhoto-RGB TIFF."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "rawpy>=0.20",
    "numpy>=1.24",
    "tifffile>=2023.7.0",
    "imagecodecs>=2023.1.23",  # tifffile uses imagecodecs for zlib compression backend
    # Phase 09 additions — already present in env; declared here for correctness.
    # Fresh-clone install order: pip install -e phase2/c41-core BEFORE pip install -e phase2/rgb-composite
    "opencv-python>=4.0",
    "scipy>=1.7",
    "c41-core>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
rgb-composite = "rgb_composite.composite:main"

[tool.hatch.build.targets.wheel]
packages = ["rgb_composite"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
