[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "triplet-capture"
version = "0.1.0"
description = "Per-frame R/G/B capture orchestrator. Drives the Scanlight + sony-capture to produce one triplet per pressed button."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "scanlightctl",  # Scanlight class from Phase 1A
    "flask>=3.0",
    "c41-core>=0.1.0",  # FlatFieldResult returned by capture_flats (Phase 10)
    # NOTE: on a fresh clone, `pip install -e phase2/c41-core` must precede
    # `pip install -e phase2/triplet-capture` (c41-core has only numpy deps,
    # no circular dependency).
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
triplet-capture = "triplet_capture.app:main"

[tool.hatch.build.targets.wheel]
packages = ["triplet_capture"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# FIX 1 (Phase 10): the end-to-end pipeline test imports apply_ffc_radiometric
# from rgb_composite directly. Without this, pytest picks up the installed
# (potentially stale) site-packages version instead of the local development
# tree. The installed version may not have apply_ffc_radiometric yet (it is
# Phase-10 additive). Adding ../rgb-composite to pythonpath ensures the local
# source is found first, consistent with how rgb-composite's own tests resolve.
pythonpath = ["../rgb-composite"]
